// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tool schema snapshots > mindvault_agent_status > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": true,
  "title": "Agent Status",
}
`;

exports[`tool schema snapshots > mindvault_agent_status > input schema 1`] = `
{
  "properties": {},
  "required": [],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_agent_status > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_backup_state > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": true,
  "title": "Back Up State",
}
`;

exports[`tool schema snapshots > mindvault_backup_state > input schema 1`] = `
{
  "properties": {
    "passphrase": {
      "description": "Passphrase used to encrypt the backup (min 8 characters). Keep it offline.",
      "type": "string",
    },
  },
  "required": [
    "passphrase",
  ],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_backup_state > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_browse > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": true,
  "title": "Browse Catalog",
}
`;

exports[`tool schema snapshots > mindvault_browse > input schema 1`] = `
{
  "properties": {
    "limit": {
      "description": "Max number of resources to return (1–100, server default 20).",
      "examples": [
        20,
        50,
      ],
      "maximum": 100,
      "minimum": 1,
      "type": "integer",
    },
    "listed": {
      "description": "Filter by listing state. The public catalog is listed=true only; listed=false yields no public catalog matches (use mindvault_registry_lookup for a specific resource).",
      "examples": [
        true,
        false,
      ],
      "type": "boolean",
    },
    "maxPrice": {
      "description": "Maximum USDC price to include (decimal string). Example: '20.00' excludes resources priced above 20 USDC.",
      "examples": [
        "20.00",
        "15.99",
        "100.00",
      ],
      "type": "string",
    },
    "minPrice": {
      "description": "Minimum USDC price to include (decimal string). Example: '5.00' includes resources priced 5 USDC and above.",
      "examples": [
        "5.00",
        "10.50",
        "0.50",
      ],
      "type": "string",
    },
    "offset": {
      "description": "Number of resources to skip for pagination.",
      "examples": [
        0,
        20,
      ],
      "minimum": 0,
      "type": "integer",
    },
    "owner": {
      "description": "Filter by publisher name or wallet address (case-insensitive substring). Example: 'Alice' or a G... Stellar address.",
      "examples": [
        "Alice",
        "GB6LGS25...",
      ],
      "type": "string",
    },
    "query": {
      "description": "Keyword(s) to match against resource title or description. Examples: 'Stellar tutorial', 'Soroban smart contracts', 'DeFi guide'",
      "examples": [
        "Stellar tutorial",
        "Soroban smart contracts",
        "DeFi guide",
      ],
      "type": "string",
    },
    "resourceType": {
      "description": "Filter by resource type. 'file' = downloadable file (PDF, ebook, etc.), 'link' = external URL to web content.",
      "enum": [
        "file",
        "link",
      ],
      "examples": [
        "link",
        "file",
      ],
      "type": "string",
    },
    "sort": {
      "description": "Sort order for results. Defaults to newest when omitted.",
      "enum": [
        "newest",
        "price_asc",
        "price_desc",
        "title",
      ],
      "examples": [
        "newest",
        "price_asc",
        "price_desc",
        "title",
      ],
      "type": "string",
    },
    "tags": {
      "description": "Comma-separated discovery tags; resources must include all listed tags (matched client-side against tag fields on results). Example: 'dataset,research'.",
      "examples": [
        "dataset",
        "dataset,research",
      ],
      "type": "string",
    },
    "verificationStatus": {
      "description": "Filter by verification status. 'verified' = passed AI originality check, 'pending' = awaiting verification, 'rejected' = failed check, 'skipped' = verification skipped.",
      "enum": [
        "pending",
        "verified",
        "rejected",
        "skipped",
      ],
      "examples": [
        "verified",
      ],
      "type": "string",
    },
  },
  "required": [],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_browse > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_buy > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": false,
  "readOnlyHint": false,
  "title": "Buy Resource",
}
`;

exports[`tool schema snapshots > mindvault_buy > input schema 1`] = `
{
  "properties": {
    "confirmMainnet": {
      "description": "Required on mainnet (or set MINDVAULT_ALLOW_MAINNET=1). Explicitly confirm this mutation/payment on the public Stellar network.",
      "type": "boolean",
    },
    "dryRun": {
      "description": "Optional dry-run flag. When true, validates the resource ID and shows intended network, endpoint, and required wallet state without submitting payment.",
      "type": "boolean",
    },
    "maxAutoPayUsdc": {
      "description": "Explicit per-call maximum automatic payment in USDC. Required when this resource costs more than MINDVAULT_MAX_AUTO_PAY_USDC; must be at least the advertised price.",
      "examples": [
        "25.00",
      ],
      "type": "string",
    },
    "resourceId": {
      "description": "The resource ID to buy, from mindvault_browse or mindvault_search. Letters, digits, dot, dash, or underscore.",
      "examples": [
        "cm7x8y9z",
        "swcn98besxpp6t1u8e77fqz3",
      ],
      "type": "string",
    },
  },
  "required": [
    "resourceId",
  ],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_buy > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_check_bindings > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": true,
  "title": "Check Bindings",
}
`;

exports[`tool schema snapshots > mindvault_check_bindings > input schema 1`] = `
{
  "properties": {},
  "required": [],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_check_bindings > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_check_consistency > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": true,
  "title": "Check Consistency",
}
`;

exports[`tool schema snapshots > mindvault_check_consistency > input schema 1`] = `
{
  "properties": {
    "expectedMetadataHash": {
      "description": "Optional content digest to compare against the on-chain metadata anchor. Accepts sha256 (64 hex chars) or sha512 (128 hex chars), bare or prefixed ('sha256:…'), case-insensitive. Compared in canonical '<algorithm>:<hex>' form.",
      "examples": [
        "sha256:9f86d081884c7d659a2feaa0c55ad015a3bf4f1b2b0b822cd15d6c15b0f00a08",
        "9f86d081884c7d659a2feaa0c55ad015a3bf4f1b2b0b822cd15d6c15b0f00a08",
      ],
      "type": "string",
    },
    "resourceId": {
      "description": "The resource ID to compare between API and on-chain registry.",
      "type": "string",
    },
  },
  "required": [
    "resourceId",
  ],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_check_consistency > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_check_state_permissions > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": true,
  "title": "Check State Permissions",
}
`;

exports[`tool schema snapshots > mindvault_check_state_permissions > input schema 1`] = `
{
  "properties": {},
  "required": [],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_check_state_permissions > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_export_receipts > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": true,
  "title": "Export Receipts",
}
`;

exports[`tool schema snapshots > mindvault_export_receipts > input schema 1`] = `
{
  "properties": {
    "format": {
      "description": "Output format. "json" (default) returns the receipts array; "csv" additionally renders the same rows as an RFC 4180 document in the envelope's csv field.",
      "enum": [
        "json",
        "csv",
      ],
      "examples": [
        "json",
        "csv",
      ],
      "type": "string",
    },
    "limit": {
      "description": "Max receipts to export, newest first (1–500).",
      "examples": [
        50,
        100,
      ],
      "maximum": 500,
      "minimum": 1,
      "type": "integer",
    },
    "network": {
      "description": "Export only receipts settled on this x402 network id. Example: 'stellar:testnet'.",
      "examples": [
        "stellar:testnet",
        "stellar:pubnet",
      ],
      "type": "string",
    },
    "resourceId": {
      "description": "Export only receipts for this resource id.",
      "examples": [
        "cm7x8y9z",
        "swcn98besxpp6t1u8e77fqz3",
      ],
      "type": "string",
    },
    "since": {
      "description": "Inclusive lower bound on the purchase time (ISO-8601 date or timestamp; a bare date is read as midnight UTC).",
      "examples": [
        "2026-08-01",
        "2026-08-01T12:00:00Z",
      ],
      "type": "string",
    },
    "until": {
      "description": "Inclusive upper bound on the purchase time (ISO-8601 date or timestamp).",
      "examples": [
        "2026-08-31",
        "2026-08-31T23:59:59Z",
      ],
      "type": "string",
    },
  },
  "required": [],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_export_receipts > output schema 1`] = `
{
  "properties": {
    "count": {
      "description": "Number of exported receipts.",
      "type": "integer",
    },
    "csv": {
      "description": "RFC 4180 document of the same rows. Present only when format is "csv".",
      "type": "string",
    },
    "currency": {
      "const": "USDC",
      "type": "string",
    },
    "filters": {
      "description": "The filters this export was produced with; null where unset.",
      "properties": {
        "limit": {
          "type": [
            "integer",
            "null",
          ],
        },
        "network": {
          "type": [
            "string",
            "null",
          ],
        },
        "resourceId": {
          "type": [
            "string",
            "null",
          ],
        },
        "since": {
          "type": [
            "string",
            "null",
          ],
        },
        "until": {
          "type": [
            "string",
            "null",
          ],
        },
      },
      "required": [
        "resourceId",
        "network",
        "since",
        "until",
        "limit",
      ],
      "type": "object",
    },
    "format": {
      "enum": [
        "json",
        "csv",
      ],
      "type": "string",
    },
    "generatedAt": {
      "description": "ISO-8601 instant the export was produced.",
      "type": "string",
    },
    "receipts": {
      "items": {
        "properties": {
          "amount": {
            "type": "string",
          },
          "currency": {
            "const": "USDC",
            "type": "string",
          },
          "explorerUrl": {
            "type": [
              "string",
              "null",
            ],
          },
          "network": {
            "type": "string",
          },
          "purchasedAt": {
            "type": "string",
          },
          "receiptRef": {
            "type": [
              "string",
              "null",
            ],
          },
          "resourceId": {
            "type": "string",
          },
          "title": {
            "type": [
              "string",
              "null",
            ],
          },
          "txHash": {
            "type": [
              "string",
              "null",
            ],
          },
        },
        "required": [
          "resourceId",
          "title",
          "amount",
          "currency",
          "network",
          "purchasedAt",
          "txHash",
          "receiptRef",
          "explorerUrl",
        ],
        "type": "object",
      },
      "type": "array",
    },
    "schema": {
      "const": "mindvault.receipt-export/v1",
      "type": "string",
    },
    "totalAmount": {
      "description": "Sum of the exported amounts as a decimal string.",
      "type": "string",
    },
  },
  "required": [
    "schema",
    "generatedAt",
    "format",
    "filters",
    "count",
    "totalAmount",
    "currency",
    "receipts",
  ],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_import_wallet > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": false,
  "readOnlyHint": false,
  "title": "Import Wallet",
}
`;

exports[`tool schema snapshots > mindvault_import_wallet > input schema 1`] = `
{
  "properties": {
    "confirmMainnet": {
      "description": "Required on mainnet (or set MINDVAULT_ALLOW_MAINNET=1). Explicitly confirm this mutation on the public Stellar network.",
      "type": "boolean",
    },
    "persist": {
      "description": "When true (default), save the imported wallet to the state file. When false, validate only and return the public key without writing to disk.",
      "examples": [
        true,
        false,
      ],
      "type": "boolean",
    },
    "profile": {
      "description": "Optional profile name to import into. Defaults to the active profile.",
      "examples": [
        "testnet",
        "mainnet-publisher",
      ],
      "type": "string",
    },
    "secretKey": {
      "description": "Stellar secret key (S… , 56 chars) to import. If omitted, reads from MINDVAULT_AGENT_SECRET env var.",
      "examples": [
        "SCHZPJ...",
      ],
      "type": "string",
    },
  },
  "required": [],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_import_wallet > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_list_profiles > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": true,
  "title": "List Profiles",
}
`;

exports[`tool schema snapshots > mindvault_list_profiles > input schema 1`] = `
{
  "properties": {},
  "required": [],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_list_profiles > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_metrics > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": false,
  "title": "Tool Metrics",
}
`;

exports[`tool schema snapshots > mindvault_metrics > input schema 1`] = `
{
  "properties": {
    "reset": {
      "description": "Clear all counters after returning the current snapshot (default: false leaves counters intact). Example: true resets metrics after reading.",
      "examples": [
        true,
        false,
      ],
      "type": "boolean",
    },
  },
  "required": [],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_metrics > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_network_profile > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": true,
  "title": "Network Profile",
}
`;

exports[`tool schema snapshots > mindvault_network_profile > input schema 1`] = `
{
  "properties": {},
  "required": [],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_network_profile > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_preview > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": true,
  "title": "Preview Resource",
}
`;

exports[`tool schema snapshots > mindvault_preview > input schema 1`] = `
{
  "properties": {
    "resourceId": {
      "description": "The unique resource identifier from mindvault_browse or mindvault_search. Example: 'cm7x8y9z'",
      "examples": [
        "cm7x8y9z",
        "res-001",
        "ckx9j2h3f",
      ],
      "type": "string",
    },
  },
  "required": [
    "resourceId",
  ],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_preview > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_publish > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": false,
  "readOnlyHint": false,
  "title": "Publish Resource",
}
`;

exports[`tool schema snapshots > mindvault_publish > input schema 1`] = `
{
  "properties": {
    "confirmMainnet": {
      "description": "Required on mainnet (or set MINDVAULT_ALLOW_MAINNET=1). Explicitly confirm this mutation/payment on the public Stellar network.",
      "type": "boolean",
    },
    "description": {
      "description": "Optional detailed description of the resource content (max 2048 characters).",
      "examples": [
        "A beginner-friendly guide covering Stellar's Federated Byzantine Agreement protocol.",
      ],
      "type": "string",
    },
    "dryRun": {
      "description": "Optional dry-run flag. When true, validates inputs and shows intended network, endpoint, and required wallet state without submitting payment or transactions.",
      "type": "boolean",
    },
    "externalUrl": {
      "description": "Public http(s) URL buyers receive after payment.",
      "examples": [
        "https://docs.stellar.org/consensus",
        "https://example.com/data.json",
      ],
      "type": "string",
    },
    "price": {
      "description": "Price in USDC as a decimal string. Example: '5.00' charges 5 USDC per access.",
      "examples": [
        "5.00",
        "0.99",
        "25.00",
      ],
      "type": "string",
    },
    "title": {
      "description": "Resource title shown in the catalog (concise, descriptive; 1–256 characters).",
      "examples": [
        "Intro to Stellar Consensus",
        "Soroban Smart Contract Tutorial",
      ],
      "type": "string",
    },
  },
  "required": [
    "title",
    "price",
    "externalUrl",
  ],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_publish > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_recover_catalog_cache > annotations 1`] = `undefined`;

exports[`tool schema snapshots > mindvault_recover_catalog_cache > input schema 1`] = `
{
  "properties": {},
  "required": [],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_recover_catalog_cache > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_register > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": false,
  "readOnlyHint": false,
  "title": "Register Publisher",
}
`;

exports[`tool schema snapshots > mindvault_register > input schema 1`] = `
{
  "properties": {
    "confirmMainnet": {
      "description": "Required on mainnet (or set MINDVAULT_ALLOW_MAINNET=1). Explicitly confirm this mutation/payment on the public Stellar network.",
      "type": "boolean",
    },
    "email": {
      "description": "Contact email for the publisher record. Must be a valid address (max 254 chars).",
      "examples": [
        "agent-a@example.com",
      ],
      "type": "string",
    },
    "name": {
      "description": "Publisher display name shown in the catalog (1–128 characters).",
      "examples": [
        "Agent A",
        "Research Bot",
      ],
      "type": "string",
    },
    "walletAddress": {
      "description": "Optional Stellar public key to receive payouts (G… , 56 chars). Defaults to the active profile's agent wallet.",
      "examples": [
        "GA6HCMBLTZS5VYYBCATRBRZ3BZJMAFUDKYYF6AH6MVCMGWMRDNSWJPIH",
      ],
      "type": "string",
    },
  },
  "required": [
    "name",
    "email",
  ],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_register > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_register_onchain > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": false,
  "readOnlyHint": false,
  "title": "Register On-Chain",
}
`;

exports[`tool schema snapshots > mindvault_register_onchain > input schema 1`] = `
{
  "properties": {
    "confirmMainnet": {
      "description": "Required on mainnet (or set MINDVAULT_ALLOW_MAINNET=1). Explicitly confirm this mutation/payment on the public Stellar network.",
      "type": "boolean",
    },
    "resourceId": {
      "description": "The resource ID to register on-chain (from mindvault_publish output). Must be verified and not already registered. Example: 'cm7x8y9z'",
      "examples": [
        "cm7x8y9z",
        "res-001",
        "ckx9j2h3f",
      ],
      "type": "string",
    },
  },
  "required": [
    "resourceId",
  ],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_register_onchain > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_registry_health > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": true,
  "title": "Registry Health",
}
`;

exports[`tool schema snapshots > mindvault_registry_health > input schema 1`] = `
{
  "properties": {},
  "required": [],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_registry_health > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_registry_info > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": true,
  "title": "Registry Info",
}
`;

exports[`tool schema snapshots > mindvault_registry_info > input schema 1`] = `
{
  "properties": {},
  "required": [],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_registry_info > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_registry_list > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": true,
  "title": "Registry List",
}
`;

exports[`tool schema snapshots > mindvault_registry_list > input schema 1`] = `
{
  "properties": {
    "limit": {
      "description": "Page size (1–20, default 20). The contract silently caps higher values at 20.",
      "examples": [
        20,
        10,
      ],
      "maximum": 20,
      "minimum": 1,
      "type": "integer",
    },
    "start": {
      "description": "0-based index into the on-chain registry (default 0). Example: 0 for the first page, 20 for the second page when limit is 20.",
      "examples": [
        0,
        20,
      ],
      "minimum": 0,
      "type": "integer",
    },
  },
  "required": [],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_registry_list > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_registry_lookup > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": true,
  "title": "Registry Lookup",
}
`;

exports[`tool schema snapshots > mindvault_registry_lookup > input schema 1`] = `
{
  "properties": {
    "resourceId": {
      "description": "The resource ID to look up on-chain. Must be a registered resource. Example: 'cm7x8y9z'",
      "examples": [
        "cm7x8y9z",
        "res-001",
        "ckx9j2h3f",
      ],
      "type": "string",
    },
  },
  "required": [
    "resourceId",
  ],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_registry_lookup > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_reset > annotations 1`] = `
{
  "destructiveHint": true,
  "idempotentHint": true,
  "readOnlyHint": false,
  "title": "Reset State",
}
`;

exports[`tool schema snapshots > mindvault_reset > input schema 1`] = `
{
  "properties": {
    "all": {
      "description": "Clear every profile and delete the state file (default: false clears active profile only). Example: true removes all profiles.",
      "examples": [
        true,
        false,
      ],
      "type": "boolean",
    },
    "confirmMainnet": {
      "description": "Required on mainnet (or set MINDVAULT_ALLOW_MAINNET=1). Explicitly confirm this mutation/payment on the public Stellar network.",
      "type": "boolean",
    },
  },
  "required": [],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_reset > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_restore_state > annotations 1`] = `
{
  "destructiveHint": true,
  "idempotentHint": false,
  "readOnlyHint": false,
  "title": "Restore State",
}
`;

exports[`tool schema snapshots > mindvault_restore_state > input schema 1`] = `
{
  "properties": {
    "blob": {
      "description": "Encrypted backup blob from mindvault_backup_state (v1:… format).",
      "type": "string",
    },
    "passphrase": {
      "description": "Passphrase used when the backup was created (min 8 characters).",
      "type": "string",
    },
  },
  "required": [
    "blob",
    "passphrase",
  ],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_restore_state > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_rotate_publisher_key > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": false,
  "readOnlyHint": false,
  "title": "Rotate Publisher Key",
}
`;

exports[`tool schema snapshots > mindvault_rotate_publisher_key > input schema 1`] = `
{
  "properties": {
    "confirmMainnet": {
      "description": "Required on mainnet (or set MINDVAULT_ALLOW_MAINNET=1). Explicitly confirm this mutation on the public Stellar network.",
      "type": "boolean",
    },
    "profile": {
      "description": "Optional profile name to rotate the key for. Defaults to the active profile.",
      "examples": [
        "testnet",
        "mainnet-publisher",
      ],
      "type": "string",
    },
  },
  "required": [],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_rotate_publisher_key > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_search > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": true,
  "title": "Search Catalog",
}
`;

exports[`tool schema snapshots > mindvault_search > input schema 1`] = `
{
  "properties": {
    "limit": {
      "description": "Max number of resources to return (1–100, server default 20).",
      "examples": [
        20,
        50,
      ],
      "maximum": 100,
      "minimum": 1,
      "type": "integer",
    },
    "listed": {
      "description": "Filter by listing state. The public catalog is listed=true only; listed=false yields no public catalog matches (use mindvault_registry_lookup for a specific resource).",
      "examples": [
        true,
        false,
      ],
      "type": "boolean",
    },
    "maxPrice": {
      "description": "Maximum USDC price to include (decimal string). Example: '20.00' excludes resources priced above 20 USDC.",
      "examples": [
        "20.00",
        "15.99",
        "100.00",
      ],
      "type": "string",
    },
    "minPrice": {
      "description": "Minimum USDC price to include (decimal string). Example: '5.00' includes resources priced 5 USDC and above.",
      "examples": [
        "5.00",
        "10.50",
        "0.50",
      ],
      "type": "string",
    },
    "offset": {
      "description": "Number of resources to skip for pagination.",
      "examples": [
        0,
        20,
      ],
      "minimum": 0,
      "type": "integer",
    },
    "owner": {
      "description": "Filter by publisher name or wallet address (case-insensitive substring). Example: 'Alice' or a G... Stellar address.",
      "examples": [
        "Alice",
        "GB6LGS25...",
      ],
      "type": "string",
    },
    "query": {
      "description": "Keyword(s) to match against resource title or description. Examples: 'Stellar tutorial', 'Soroban smart contracts', 'DeFi guide'",
      "examples": [
        "Stellar tutorial",
        "Soroban smart contracts",
        "DeFi guide",
      ],
      "type": "string",
    },
    "resourceType": {
      "description": "Filter by resource type. 'file' = downloadable file (PDF, ebook, etc.), 'link' = external URL to web content.",
      "enum": [
        "file",
        "link",
      ],
      "examples": [
        "link",
        "file",
      ],
      "type": "string",
    },
    "sort": {
      "description": "Sort order for results. Defaults to newest when omitted.",
      "enum": [
        "newest",
        "price_asc",
        "price_desc",
        "title",
      ],
      "examples": [
        "newest",
        "price_asc",
        "price_desc",
        "title",
      ],
      "type": "string",
    },
    "tags": {
      "description": "Comma-separated discovery tags; resources must include all listed tags (matched client-side against tag fields on results). Example: 'dataset,research'.",
      "examples": [
        "dataset",
        "dataset,research",
      ],
      "type": "string",
    },
    "verificationStatus": {
      "description": "Filter by verification status. 'verified' = passed AI originality check, 'pending' = awaiting verification, 'rejected' = failed check, 'skipped' = verification skipped.",
      "enum": [
        "pending",
        "verified",
        "rejected",
        "skipped",
      ],
      "examples": [
        "verified",
      ],
      "type": "string",
    },
  },
  "required": [],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_search > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_set_listed > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": false,
  "title": "Set Listed",
}
`;

exports[`tool schema snapshots > mindvault_set_listed > input schema 1`] = `
{
  "properties": {
    "confirmMainnet": {
      "description": "Required on mainnet (or set MINDVAULT_ALLOW_MAINNET=1). Explicitly confirm this mutation on the public Stellar network.",
      "type": "boolean",
    },
    "listed": {
      "description": "Set to true to list/relist the resource in the catalog, or false to delist it.",
      "examples": [
        true,
        false,
      ],
      "type": "boolean",
    },
    "resourceId": {
      "description": "The resource ID to change listed state for. Example: 'cm7x8y9z'",
      "examples": [
        "cm7x8y9z",
        "res-001",
      ],
      "type": "string",
    },
  },
  "required": [
    "resourceId",
    "listed",
  ],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_set_listed > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_set_price > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": false,
  "title": "Set Price",
}
`;

exports[`tool schema snapshots > mindvault_set_price > input schema 1`] = `
{
  "properties": {
    "confirmMainnet": {
      "description": "Required on mainnet (or set MINDVAULT_ALLOW_MAINNET=1). Explicitly confirm this mutation/payment on the public Stellar network.",
      "type": "boolean",
    },
    "price": {
      "description": "New price in USDC as a decimal string. Example: '10.00' charges 10 USDC per access.",
      "examples": [
        "10.00",
        "5.50",
        "0.99",
      ],
      "type": "string",
    },
    "resourceId": {
      "description": "The resource ID to update price for. Example: 'cm7x8y9z'",
      "examples": [
        "cm7x8y9z",
        "res-001",
      ],
      "type": "string",
    },
  },
  "required": [
    "resourceId",
    "price",
  ],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_set_price > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_set_tags > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": false,
  "title": "Set Tags",
}
`;

exports[`tool schema snapshots > mindvault_set_tags > input schema 1`] = `
{
  "properties": {
    "confirmMainnet": {
      "description": "Required on mainnet (or set MINDVAULT_ALLOW_MAINNET=1). Explicitly confirm this mutation on the public Stellar network.",
      "type": "boolean",
    },
    "resourceId": {
      "description": "The on-chain resource ID to update tags for (from mindvault_publish or mindvault_browse).",
      "examples": [
        "cm7x8y9z",
        "res-001",
      ],
      "type": "string",
    },
    "tags": {
      "description": "Replacement tag list (0–8 entries, each 1–32 chars). Tags are normalized to lowercase. Use lowercase letters, digits, hyphens, or underscores. Examples: ['dataset', 'research'], [] to clear all tags.",
      "examples": [
        [
          "dataset",
          "research",
        ],
        [
          "finance",
          "api",
        ],
        [],
      ],
      "items": {
        "type": "string",
      },
      "type": "array",
    },
  },
  "required": [
    "resourceId",
    "tags",
  ],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_set_tags > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_setup_wallet > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": false,
  "readOnlyHint": false,
  "title": "Set Up Wallet",
}
`;

exports[`tool schema snapshots > mindvault_setup_wallet > input schema 1`] = `
{
  "properties": {
    "confirmMainnet": {
      "description": "Required on mainnet (or set MINDVAULT_ALLOW_MAINNET=1). Explicitly confirm this mutation/payment on the public Stellar network.",
      "type": "boolean",
    },
    "profile": {
      "description": "Optional profile name to create/switch to. Use letters, digits, dot, dash, or underscore (1–64 chars). Examples: 'testnet', 'mainnet-publisher', 'buyer.alice'",
      "examples": [
        "testnet",
        "mainnet-publisher",
        "buyer.alice",
      ],
      "type": "string",
    },
  },
  "required": [],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_setup_wallet > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_transfer_ownership > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": false,
  "readOnlyHint": false,
  "title": "Transfer Ownership",
}
`;

exports[`tool schema snapshots > mindvault_transfer_ownership > input schema 1`] = `
{
  "properties": {
    "confirmMainnet": {
      "description": "Required on mainnet (or set MINDVAULT_ALLOW_MAINNET=1). Explicitly confirm this mutation/payment on the public Stellar network.",
      "type": "boolean",
    },
    "newCreator": {
      "description": "The Stellar public key (G… , 56 chars) of the new resource owner.",
      "examples": [
        "GA6HCMBLTZS5VYYBCATRBRZ3BZJMAFUDKYYF6AH6MVCMGWMRDNSWJPIH",
      ],
      "type": "string",
    },
    "resourceId": {
      "description": "The resource ID to transfer ownership of. Example: 'cm7x8y9z'",
      "examples": [
        "cm7x8y9z",
        "res-001",
      ],
      "type": "string",
    },
  },
  "required": [
    "resourceId",
    "newCreator",
  ],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_transfer_ownership > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_tx_status > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": true,
  "title": "Transaction Status",
}
`;

exports[`tool schema snapshots > mindvault_tx_status > input schema 1`] = `
{
  "properties": {
    "txHash": {
      "description": "The 64-character hex transaction hash from Stellar (a sha256 digest; case-insensitive, 'sha256:' prefix accepted). From mindvault_register_onchain or mindvault_publish output.",
      "examples": [
        "f47ac10b58cc4372a5670e02b2c3d479c3e5d0a1b2c3d4e5f6a7b8c9d0e1f2a3",
        "3fdba35f04dc8c462986c992bcf875546257113072a909c162f7e470e581e278",
      ],
      "type": "string",
    },
  },
  "required": [
    "txHash",
  ],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_tx_status > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_update_metadata > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": false,
  "title": "Update Metadata",
}
`;

exports[`tool schema snapshots > mindvault_update_metadata > input schema 1`] = `
{
  "properties": {
    "confirmMainnet": {
      "description": "Required on mainnet (or set MINDVAULT_ALLOW_MAINNET=1). Explicitly confirm this mutation/payment on the public Stellar network.",
      "type": "boolean",
    },
    "metadata": {
      "description": "The new metadata pointer string (max 512 characters). Must start with ipfs://, ar://, http(s)://, sha256:, sha-256:, or 0x. Example: 'ipfs://QmXoypizjW3WknFiJnKLwHCnL72vedxjQkDDP1mXWo6uco'",
      "examples": [
        "ipfs://QmXoypizjW3WknFiJnKLwHCnL72vedxjQkDDP1mXWo6uco",
        "https://example.com/metadata.json",
      ],
      "type": "string",
    },
    "resourceId": {
      "description": "The on-chain resource ID to update (from mindvault_publish or mindvault_browse). Letters, digits, dot, dash, or underscore.",
      "examples": [
        "cm7x8y9z",
        "res-001",
      ],
      "type": "string",
    },
  },
  "required": [
    "resourceId",
    "metadata",
  ],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_update_metadata > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_use_profile > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": false,
  "title": "Use Profile",
}
`;

exports[`tool schema snapshots > mindvault_use_profile > input schema 1`] = `
{
  "properties": {
    "name": {
      "description": "Profile name to make active. Use letters, digits, dot, dash, or underscore (1–64 chars). Examples: 'mainnet', 'testnet-buyer', 'publisher.bob'",
      "examples": [
        "mainnet",
        "testnet-buyer",
        "publisher.bob",
      ],
      "type": "string",
    },
  },
  "required": [
    "name",
  ],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_use_profile > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_verify_install > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": true,
  "title": "Verify Install",
}
`;

exports[`tool schema snapshots > mindvault_verify_install > input schema 1`] = `
{
  "properties": {},
  "required": [],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_verify_install > output schema 1`] = `null`;

exports[`tool schema snapshots > mindvault_wallet_info > annotations 1`] = `
{
  "destructiveHint": false,
  "idempotentHint": true,
  "readOnlyHint": true,
  "title": "Wallet Info",
}
`;

exports[`tool schema snapshots > mindvault_wallet_info > input schema 1`] = `
{
  "properties": {},
  "required": [],
  "type": "object",
}
`;

exports[`tool schema snapshots > mindvault_wallet_info > output schema 1`] = `null`;

exports[`tool schema snapshots > the covered tool names are pinned 1`] = `
[
  "mindvault_agent_status",
  "mindvault_backup_state",
  "mindvault_browse",
  "mindvault_buy",
  "mindvault_check_bindings",
  "mindvault_check_consistency",
  "mindvault_check_state_permissions",
  "mindvault_export_receipts",
  "mindvault_import_wallet",
  "mindvault_list_profiles",
  "mindvault_metrics",
  "mindvault_network_profile",
  "mindvault_preview",
  "mindvault_publish",
  "mindvault_recover_catalog_cache",
  "mindvault_register",
  "mindvault_register_onchain",
  "mindvault_registry_health",
  "mindvault_registry_info",
  "mindvault_registry_list",
  "mindvault_registry_lookup",
  "mindvault_reset",
  "mindvault_restore_state",
  "mindvault_rotate_publisher_key",
  "mindvault_search",
  "mindvault_set_listed",
  "mindvault_set_price",
  "mindvault_set_tags",
  "mindvault_setup_wallet",
  "mindvault_transfer_ownership",
  "mindvault_tx_status",
  "mindvault_update_metadata",
  "mindvault_use_profile",
  "mindvault_verify_install",
  "mindvault_wallet_info",
]
`;
